--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p class="about__us__home__page">ESTUFAS ARCO, ES UNA EMPRESA QUE FUE FUNDADA EN 1977, DEDICADA A LA FABRICACION DE CHIMENEAS, CALENTADORES Y ESTUFAS A LEÑA... <br>    <a id="myBtn"><button class="leer__mas__home__page">Leer Mas</button></a>
     </p><br>
     <div class="contact__us__div">
-        <p class="contactus__title__homepage">Contactenos</p>
+        <p class="contactus__title__homepage">Contacto</p>
        
 
         <div class="row">
