Added final Image among other things

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <center><img class="logo__image" src="./images/arco__logo.png"></center><br>
     <center><a href="https://estufaselarco.com.mx/tienda/"><button class="tienda__button__home__page">Tienda</button></a></center>
     <h1 class="title__home__page">LE DAMOS CALOR A SU HOGAR</h1>
-    <img class="image__home__screen" src="./images/estufa1.png">
+    <img class="image__home__screen" src="./images/3chimineys.png">
     <p class="about__us__home__page">ESTUFAS ARCO, ES UNA EMPRESA QUE FUE FUNDADA EN 1977, DEDICADA A LA FABRICACION DE CHIMENEAS, CALENTADORES Y ESTUFAS A LEÑA... <br>    <a id="myBtn"><button class="leer__mas__home__page">Leer Mas</button></a>
     </p><br>
     <div class="contact__us__div">
@@ -29,8 +29,8 @@
         
           <div class="column">
             <div class="card">
-              <a href="mailto:estufaselarco.com.mx" style="text-decoration: none; color: red;"><p style="font-size: 30px;">estufaselarco@gmail.com</p></a>
-              <a href="mailto:estufasarco25@outlook.com" style="text-decoration: none; color: red;"><p style="font-size: 30px;">estufasarco25@outlook.com</p></a>
+              <a href="mailto:estufaselarco.com.mx" style="text-decoration: none; color: rgb(211, 20, 20);"><p style="font-size: 30px;">estufaselarco@gmail.com</p></a>
+              <a href="mailto:estufasarco25@outlook.com" style="text-decoration: none; color: rgb(195, 21, 21);"><p style="font-size: 30px;">estufasarco25@outlook.com</p></a>
             </div>
           </div>
           
