--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <center><img class="logo__image" src="./images/arco__logo.png"></center><br>
     <center><a href="https://estufaselarco.com.mx/tienda/"><button class="tienda__button__home__page">Tienda</button></a></center>
-    <h1 class="title__home__page">LE DAMOS CALOR A SU HOGAR</h1>
+    <h1 class="title__home__page">Bienvenido a Estufas El Arco</h1>
     <img class="image__home__screen" src="./images/3chimineys.png">
-    <p class="about__us__home__page">ESTUFAS ARCO, ES UNA EMPRESA QUE FUE FUNDADA EN 1977, DEDICADA A LA FABRICACION DE CHIMENEAS, CALENTADORES Y ESTUFAS A LEÑA... <br>    <a id="myBtn"><button class="leer__mas__home__page">Leer Mas</button></a>
+    <p class="about__us__home__page">Acerca de Nosotros<br>    <a id="myBtn"><button class="leer__mas__home__page">Leer Mas</button></a>
     </p><br>
     <div class="contact__us__div">
         <p class="contactus__title__homepage">Contacto</p>
