some code false data fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tailwind testing</title>
+    <title>Estufas El Arco</title>
     <link rel="stylesheet" href="https://cdn.tailwindcss.com/dist/tailwind.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
@@ -28,8 +28,8 @@
                 <div class="hidden md:flex items-center space-x-1">
                     <a href="/" class="py-4 px-5 text-green-500 border-b-4 border-green-500 font-semibold ">Inicio</a>
                     <a href="productos.html" class="py-4 px-5 text-gray-500 font-semibold hover:text-green-500 transition duration-300 ">Productos</a>
-                    <a href="acercanosotros.html" class="py-4 px-5 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Acerca de Nosotros</a>
-                    <a href="contacto.html" class="py-4 px-5 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Contáctanos</a>
+                    <a href="aboutus.html" class="py-4 px-5 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Acerca de Nosotros</a>
+                    <a href="contactus.html" class="py-4 px-5 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Contáctanos</a>
                 </div>
             </div>
             <!-- Secondary Navbar items -->
@@ -60,8 +60,8 @@
         <ul class="">
             <li class="active"><a href="/" class="block text-sm px-2 py-4 text-white bg-green-500 font-semibold">Inicio</a></li>
             <li><a href="productos.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Productos</a></li>
-            <li><a href="acercanosotros.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Acerca de Nosotros</a></li>
-            <li><a href="contacto.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Contáctanos</a></li>
+            <li><a href="aboutus.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Acerca de Nosotros</a></li>
+            <li><a href="contactus.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Contáctanos</a></li>
         </ul>
     </div>
     <script>
