--- a/contactus.html
+++ b/contactus.html
@@ -27,9 +27,9 @@
                 <!-- Primary Navbar items -->
                 <div class="hidden md:flex items-center space-x-1">
                     <a href="index.html" class="py-4 px-5 text-gray-500 font-semibold ">Inicio</a>
-                    <a href="/" class="py-4 px-5 text-green-500 font-semibold hover:text-green-500 transition duration-300 border-green-500 border-b-4">Productos</a>
-                    <a href="aboutus.html" class="py-5 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Acerca de Nosotros</a>
-                    <a href="contactus.html" class="py-4 px-5 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Contáctanos</a>
+                    <a href="productos.html" class="py-4 px-5 text-gray-500 font-semibold hover:text-green-500 transition duration-300 ">Productos</a>
+                    <a href="aboutus.html" class="py-5 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300 " >Acerca de Nosotros</a>
+                    <a href="/" class="py-4 px-5 text-green-500 font-semibold hover:text-green-500 transition duration-300 border-green-500 border-b-4">Contáctanos</a>
                 </div>
             </div>
             <!-- Secondary Navbar items -->
@@ -59,9 +59,9 @@
     <div class="hidden mobile-menu">
         <ul class="">
             <li class="active"><a href="index.html" class="block text-sm px-2 py-4 text-white bg-green-500 font-semibold">Inicio</a></li>
-            <li><a href="/" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Productos</a></li>
-            <li><a href="acercanosotros.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Acerca de Nosotros</a></li>
-            <li><a href="contactus.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Contáctanos</a></li>
+            <li><a href="productos.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Productos</a></li>
+            <li><a href="aboutus.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Acerca de Nosotros</a></li>
+            <li><a href="/" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Contáctanos</a></li>
         </ul>
     </div>
     <script>
@@ -73,7 +73,7 @@
         });
     </script>
 </nav>
-<h1 class="text-green-500 text-2xl md:text-3xl lg:text-4xl font-bold p-4">Nuestros Productos</h1>
+<h1 class="text-green-500 text-2xl md:text-3xl lg:text-4xl font-bold p-4">Contact US</h1>
       
 
       
