rederect to estufaselarco.com.mx

--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -2,6 +2,7 @@
 <html>
     <title>Estufas Arco</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta http-equiv="Refresh" content="0; url='https://www.estufaselarco.com.mx'" />
 <style>
 body, html {
   height: 100%;
@@ -63,20 +64,6 @@ hr {
 </style>
 <body>
 
-<div class="bgimg">
-  <div class="topleft">
-    <img class="logo" src="arco__logo.png">
-  </div>
-  <div class="middle">
-    <h1>COMING SOON</h1>
-    <hr>
-    <p>Para Ver nuestros Productos haga clik en el boton</p>
-    <a href="https://estufaselarco.com.mx/tienda"><button class="tienda">Tienda</button></a>
-  </div>
-  <div class="bottomleft">
-    <p>Pagina en Programacion</p>
-  </div>
-</div>
 
 </body>
 </html>
